# GameWithNoName

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: custom_window.cpp  custom_window.h  mesh.cpp  settings.cpp
res/: log.blend  player.blend  player.mtl  rock.blend  wooden_house.blend
res/data/items/: andesite_rock.json  beech_log.json  beech_plank.json
res/models/blender/: birch_tree.blend  gravel.blend  log.blend  player.blend  rock.blend  wooden_house.blend
res/models/materials/: birch_tree.mtl  gravel.mtl  log.mtl  rock.mtl  wooden_house.mtl
res/shaders/fragment_shaders/: font_shader.fs  overlay_shader.fs  overlay_texture_shader.fs  test_shader.fs
res/shaders/vertex_shaders/: font_shader.vs  model_shader.vs  overlay_shader.vs  overlay_texture_shader.vs  test_shader.vs  texture_shader.vs
res/textures/: menu_background.xcf
src/: game.cpp  game_window.cpp  game_window.h  main.cpp  main.hpp
src/events/: event_handler.cpp  event_handler.h  events.h
src/menu/: button.cpp  button.h  empty_menu.cpp  empty_menu.h  menu.cpp  resource.h  resource_menu.cpp  resource_menu.h  settings_menu.cpp  settings_menu.h
src/render_engine/: render_utils.h  render_window.cpp  render_window.h
src/rendering/: buffer.cpp  buffer.h  camera.cpp  camera.h  font.cpp  font.h  mesh.cpp  mesh.h  model.cpp  model.h  model_loader.cpp  model_loader.h  position.h  render_window.cpp  render_window.h  shader.cpp  shader.h  shader_constants.h  texture.cpp  texture.h  vao.cpp  vao.h  vec.h
src/utils/: registry.h  registry.ipp
